# droidrun

./: .gitignore  CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: bounty.yml  publish.yml
agent-test-flows/: README.md
compat/: pyproject.toml
compat/droidrun/: __init__.py  __main__.py
compat/droidrun/macro/: __init__.py  __main__.py
docs/: docs.json  quickstart.mdx
docs/concepts/: architecture.mdx  events-and-workflows.mdx  prompts.mdx  shared-state.mdx
docs/features/: app-cards.mdx  credentials.mdx  custom-tools.mdx  custom-variables.mdx  structured-output.mdx  telemetry.mdx  tracing.mdx
docs/guides/: cli.mdx  device-setup.mdx  docker.mdx  overview.mdx
docs/sdk/: adb-tools.mdx  base-tools.mdx  configuration.mdx  droid-agent.mdx  ios-tools.mdx  reference.mdx
docs/v5/: quickstart.mdx
droidrun/: __init__.py  config_example.yaml  log_handlers.py  portal.py
droidrun/agent/: usage.py
droidrun/cli/: configure_prompts.py  configure_wizard.py  device_commands.py  doctor.py  event_handler.py  main.py
droidrun/config/: credentials_example.yaml
droidrun/config_manager/: __init__.py  env_keys.py  (+3 more)
mobilerun/: __init__.py  __main__.py  config_example.yaml  portal.py
scripts/: benchmark_cli_models.py
tests/: eval_coordinate_grounding.py  test_android_vision_coordinate_contract.py  test_anthropic_oauth_llm.py  test_api_key_sources.py  test_app_cards.py  test_cloud_cli.py  test_core_local_runtime.py  test_deviceauth.py  test_external_message.py  test_fast_agent_xml_parser.py  test_gemini_oauth_llm.py  test_ios_provider.py  test_ios_vision_coordinate_contract.py  test_llm_picker.py  test_llm_picker_and_configure_wizard.py  test_macro_guarded_replay.py  test_portal_asset_selection.py  test_provider_registry.py  test_type_action.py  test_usage.py  test_vision_only_run_cli.py  test_vision_sizing.py  test_visual_remote_connection.py
(+158 files in other folders)
