[project]
name = "droidrun"
version = "0.6.3"
description = "Compatibility shim — droidrun has been renamed to mobilerun"
requires-python = ">=3.11,<3.14"
dependencies = ["mobilerun==0.6.3"]

[project.optional-dependencies]
anthropic = ["mobilerun[anthropic]==0.6.3"]
deepseek = ["mobilerun[deepseek]==0.6.3"]
langfuse = ["mobilerun[langfuse]==0.6.3"]
dev = ["mobilerun[dev]==0.6.3"]

[project.scripts]
droidrun = "droidrun.cli_shim:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["droidrun"]
